--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <div class="pie">
       
       <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
-  <a href="#news">menu</a>
-  <a href="#contact">merch</a>
-  <a href="#about">settings</a>
+  <a href="#" class="active">Home</a>
+  <a href="menu.html">menu</a>
+  <a href="merch.html">merch</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
