--- a/menu.html
+++ b/menu.html
@@ -15,8 +15,8 @@
       
 
 <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
-  <a href="#news">menu</a>
+  <a href="index.html" class="active">Home</a>
+  <a href="#">menu</a>
   <a href="#contact">merch</a>
   <a href="#about">settings</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
