--- a/menu.html
+++ b/menu.html
@@ -17,8 +17,7 @@
 <div class="topnav" id="myTopnav">
   <a href="index.html" class="active">Home</a>
   <a href="#">menu</a>
-  <a href="#contact">merch</a>
-  <a href="#about">settings</a>
+  <a href="merch.html">merch</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
