--- a/menu.html
+++ b/menu.html
@@ -15,8 +15,8 @@
       
 
 <div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Home</a>
-  <a href="#">menu</a>
+  <a href="index.html">Home</a>
+  <a href="#" class="active">menu</a>
   <a href="merch.html">merch</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
