--- a/merch.html
+++ b/merch.html
@@ -15,9 +15,9 @@
       
 
 <div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Home</a>
+  <a href="index.html">Home</a>
   <a href="menu.html">menu</a>
-  <a href="#">merch</a>
+  <a href="#" class="active">merch</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
