--- a/merch.html
+++ b/merch.html
@@ -5,7 +5,7 @@
     <title>Streets</title>
     <meta name="description"  content="streets sports bar">
     <script defer src="./script.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   
   <body>
