--- a/merch.html
+++ b/merch.html
@@ -5,7 +5,7 @@
     <title>Streets</title>
     <meta name="description"  content="streets sports bar">
     <script defer src="./script.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="style.css" href="style.css">
   </head>
   
   <body>
