--- a/menu.html
+++ b/menu.html
@@ -48,9 +48,9 @@
   <li>raspberry</li>
   <li>vanilla</li>
   
-  <h2> kids bar<h2>
+  <ol> kids bar</ol>
      
-    <ol> All non alcoholic</ol>
+    <ol> All non alcoholic</li>
     <li>shirley temple</li>
     <li> non-alcholic pina colada</li>
     <li>choclate milkshake</li>
