--- a/menu.html
+++ b/menu.html
@@ -50,7 +50,7 @@
   
   <ol> kids bar</ol>
      
-    <ol> All non alcoholic</li>
+    <li> All non alcoholic</li>
     <li>shirley temple</li>
     <li> non-alcholic pina colada</li>
     <li>choclate milkshake</li>
