--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
   
     <h1>Home<h1>
-      <p> we are tysons sandwich and more sports bar.<p>
+      <p> we are streets sandwich and more sports bar.<p>
       we are now open for buisness. we started so we can have a non pricey sports bar and to make people happy with our food
          </div>
     
