--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 <body>
 
   <div class="topnav" id="myTopnav">
-    <a href="#home" class="active">Home</a>
-    <a href="#news">menu</a>
-    <a href="#contact">merch</a>
-    <a href="#about">settings</a>
+    <a href="#" class="active">Home</a>
+    <a href="menu.html">menu</a>
+    <a href="#merch.html">merch</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
      
     </a>
