--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     we are now open for buisness. we started so we can have a non pricey sports bar and to make people happy with our food
   </p>
 
-  <button class="direct">directions</button>
-  <button class="call">call</button>
-  <button class="order">order</button>
-
-  <button onclick="darkMode()" class="toggle">darkmode</button>
+  <button onclick= "directions()" class="yes">directions</button>
+<button onclick= "call()"class="hi">call</button>
+<button onclick= "order()"class="yeah">order </button>
+    
+    <button onclick= "darkMode()" class="toggle">darkmode</button>
 
 </body>
 
