--- a/merch.html
+++ b/merch.html
@@ -26,7 +26,7 @@
   
     
          <h1>MERCH</h1> 
-    
+    <img src=https://merchdoods.com/cdn/shop/products/sweatshirt_grande.png?v=1609197075 alt="peace in the streets">
  
   <p>folllow us on tik tok @streetsfamilysresturant</p>
     <p>follow us on youtube @streetsfamilyresturant</p>
