--- a/menu.html
+++ b/menu.html
@@ -18,9 +18,9 @@
      
 
 <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
-  <a href="#news">menu</a>
-  <a href="#contact">merch</a>
+  <a href="#index.html" class="active">Home</a>
+  <a href="#">menu</a>
+  <a href="#merch.html">merch</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
