--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
   <head>
     <title>Streets</title>
     <meta name="description"  content="streets sports bar">
-<link rel="style.css">
+ <link rel="stylesheet" href="style.css">
     <script defer src="./script.js"></script>
   </head>
   
