--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
     <a href="#" class="active">menu</a>
     <a href="#merch.html">merch</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-     
+     <i class="fa fa-bars"></i>
     </a>
 </div>
 </div>
