--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="topnav" id="myTopnav">
     <a href="#" class="active">Home</a>
     <a href="menu.html">menu</a>
-    <a href="#merch.html">merch</a>
+    <a href="merch.html">merch</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
      
     </a>
