--- a/menu.html
+++ b/menu.html
@@ -54,11 +54,11 @@
   <h2> kids bar<h2>
      
     <ol> All non alcoholic</ol>
-    <p> a shirley temple a nonalcoholic cocktail of ginger ale and grenadine garnished with a maraschino cherry <p>
-    <p> non-alcholic pina colada<p>
-    <p>choclate milkshake</p>
-    <p>vanilla milkshake</p>
-    <p>florida</p>
+    <li> a shirley temple a nonalcoholic cocktail of ginger ale and grenadine garnished with a maraschino cherry </li>
+    <li> non-alcholic pina colada</li>
+    <li>choclate milkshake</li>
+    <li>vanilla milkshake</li>
+    <li>florida</li>
     </div>
     
      <button onclick= "directions()" class="yes">directions</button>
