--- a/menu.html
+++ b/menu.html
@@ -54,7 +54,7 @@
   <h2> kids bar<h2>
      
     <ol> All non alcoholic</ol>
-    <li> a shirley temple a nonalcoholic cocktail of ginger ale and grenadine garnished with a maraschino cherry </li>
+    <li>  shirley temple<br> a nonalcoholic cocktail of ginger ale and grenadine garnished with a maraschino cherry </li>
     <li> non-alcholic pina colada</li>
     <li>choclate milkshake</li>
     <li>vanilla milkshake</li>
