--- a/menu.html
+++ b/menu.html
@@ -44,7 +44,7 @@
 
 <div class="dessert">
   <ul>DESSERT</ul>
-    <li>generations pie</li>
+    <li>generations pie<br>a creamy pudding-like pie with a hard pecan bottom.</li>
   <li>two scoops of ice cream</li>
   <ul>flavors of ice cream</ul>
   <li>choclate</li>
