--- a/menu.html
+++ b/menu.html
@@ -51,7 +51,7 @@
   <li>raspberry</li>
   <li>vanilla</li>
   
-  <h2> kids bar<h2>
+  <ol> kids bar</ol>
      
     <ol> All non alcoholic</ol>
     <li>  shirley temple<br> a nonalcoholic cocktail of ginger ale and grenadine garnished with a maraschino cherry </li>
