--- a/menu.html
+++ b/menu.html
@@ -55,7 +55,7 @@
      
     <ol> All non alcoholic</ol>
     <li>  shirley temple<br> a nonalcoholic cocktail of ginger ale and grenadine garnished with a maraschino cherry </li>
-    <li> non-alcholic pina colada</li>
+    <li> non-alcholic pina colada<br>creamy refreshing and non-alcoholic </li>
     <li>choclate milkshake</li>
     <li>vanilla milkshake</li>
     <li>florida</li>
